src/objects/Safety_Deposit_Box__c.object
<CustomObject>
    <fields>
        <fullName>Box_Number__c</fullName>
        <label>Box Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_charge_taken__c</fullName>
        <label>Date charge taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_next_charge_due__c</fullName>
        <formula>Date_charge_taken__c +90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date next charge due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Charge_Due__c</fullName>
        <label>Date  of Last Charge Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Charge_Taken__c</fullName>
        <label>Last  Charge Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_box_holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary box holder</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Safety_Deposit_Boxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_box_holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary box holder</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Safety_Deposit_Boxes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_method__c</fullName>
        <label>Security method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PIN</fullName>
                </value>
                <value>
                    <fullName>Palm reader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size_of_box__c</fullName>
        <label>Size of box</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Size 1</fullName>
                </value>
                <value>
                    <fullName>Size 2</fullName>
                </value>
                <value>
                    <fullName>Size 3</fullName>
                </value>
                <value>
                    <fullName>Size 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Quarterly_Fee_Payments__c</fullName>
        <label>Status of Quarterly Fee Payments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PAID</fullName>
                    <default>true</default>
                    <label>PAID</label>
                </value>
                <value>
                    <fullName>OUTSTANDING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tertiary_box_holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tertiary box holder</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Safety_Deposit_Boxes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yearly_charge_for_box__c</fullName>
        <label>Charge for box per 3 months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Safe Deposit Box</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Primary_box_holder__c</columns>
        <columns>Secondary_box_holder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SDB{0000}</displayFormat>
        <label>Safe Deposit Box Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safe Deposit Boxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>